Update docker stuff